--- a/popup.html
+++ b/popup.html
@@ -4,21 +4,30 @@
   <title>SafeBrowse Warning</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      width: 300px;
-      padding: 10px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      width: 320px;
+      padding: 15px;
+      background-color: #f8f9fa;
+      color: #212529;
     }
     #status {
       font-weight: bold;
       margin-bottom: 10px;
+      font-size: 16px;
+    }
+    #details {
+      font-size: 14px;
+      margin-bottom: 15px;
     }
     #report-btn {
       background-color: #d9534f;
       color: white;
       border: none;
-      padding: 8px 12px;
+      padding: 10px 16px;
       cursor: pointer;
-      border-radius: 4px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
     }
     #report-btn:hover {
       background-color: #c9302c;
@@ -27,6 +36,7 @@
 </head>
 <body>
   <div id="status">Checking site safety...</div>
+  <div id="details"></div>
   <button id="report-btn">Report Suspicious Site</button>
 
   <script src="popup.js"></script>
